[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.2.1",
    "gudhi>=3.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mne>=1.11.0",
    "mne-bids>=0.18.0",
    "python-dotenv>=1.2.1",
    "ripser>=0.6.12",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "umap-learn>=0.5.9.post2",
]
